# easySTL

./: .gitignore  CMakeLists.txt
include/: algo.h  allocator_wrapper.h  constructor.h  iterator.h  malloc_allocator.h  memory_pool_allocator.h  uninitialized.h  vector.h
src/: main.cpp
test/: algo_test.cpp  allocator_test.cpp  constructor_test.cpp  iterator_test.cpp  uninitialized_test.cpp  vector_test.cpp
